--- a/image gallery.html
+++ b/image gallery.html
@@ -47,9 +47,9 @@
     <div class="container">
         <div class="row">
             <div class="col col-1">
-                <img src="C:\Users\Student.DESKTOP-S1CUBE0\OneDrive\Desktop\img.1\images.jpg" width="400px" height="200px" alt="">
+                <img src="C:\Users\Student.DESKTOP-S1CUBE0\OneDrive\Desktop\img.1\flowers.jpg" width="400px" height="200px" alt="">
                 <div class="text-body">
-                    <h3><b><i>Images</i></b></h3>
+                    <h3><b><i>Flowers</i></b></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia repellat delectus fuga nostrum impedit est, ad, sapiente, voluptatum porro dicta temporibus. </p>
                 </div>
             </div>
